--- a/project/src/Dungeon/DungeonUI.css
+++ b/project/src/Dungeon/DungeonUI.css
@@ -25,7 +25,7 @@
     height:fit-content;
     width: fit-content;
     aspect-ratio: 1;
-    outline: purple solid thick;
+    outline:black solid thick;
     flex-grow: 1;
     display: grid;
     grid-template: repeat(5, auto) / repeat(5, auto);
